@@ -175,6 +175,7 @@ CommunicationsException.19=\n\nFor Windows-based platforms, see Microsoft Knowle
 CommunicationsException.19a=The configuration parameter \"localSocketAddress\" has been set to a network interface not available for use by the JVM.
 CommunicationsException.20=Communications link failure
 CommunicationsException.21=\ due to underlying exception: 
+CommunicationsException.ClientWasStreaming=Application was streaming results when the connection failed. Consider raising value of 'net_write_timeout' on the server.
 NonRegisteringDriver.3=Hostname of MySQL Server
 NonRegisteringDriver.7=Port number of MySQL Server
 NonRegisteringDriver.13=Username to authenticate as
