@@ -376,6 +376,11 @@ public class RowDataDynamic implements RowData {
 			} else {
 				this.isAfterEnd = true;
 			}
+		} catch (CommunicationsException comEx) {
+			// Give a better error message
+			comEx.setWasStreamingResults();
+			
+			throw comEx;
 		} catch (SQLException sqlEx) {
 			// don't wrap SQLExceptions
 			throw sqlEx;
